// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReplyCreateFormWrapper /> should no alert an a disabled form when form is not contribuable 1`] = `
<div>
  <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "anonymousAllowed": false,
        "contribuable": false,
        "description": null,
        "id": "3",
        "multipleRepliesAllowed": false,
        "phoneConfirmationRequired": false,
        "viewerReplies": Array [
          Object {
            "id": "326",
          },
          Object {
            "id": "289",
          },
        ],
      }
    }
    reply={null}
  />
</div>
`;

exports[`<ReplyCreateFormWrapper /> should render an alert an a disabled form when form is contribuable and doesn't allow multiple votes and user has already votes 1`] = `
<div>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    className="hidden-print"
    closeLabel="Close alert"
  >
    <strong>
      <FormattedMessage
        id="reply.user_has_reply.reason"
        values={Object {}}
      />
    </strong>
    <p>
      <FormattedMessage
        id="reply.user_has_reply.error"
        values={Object {}}
      />
    </p>
  </Alert>
  <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "anonymousAllowed": false,
        "contribuable": true,
        "description": null,
        "id": "4",
        "multipleRepliesAllowed": false,
        "phoneConfirmationRequired": false,
        "viewerReplies": Array [
          Object {
            "id": "326",
          },
          Object {
            "id": "289",
          },
        ],
      }
    }
    reply={null}
  />
</div>
`;

exports[`<ReplyCreateFormWrapper /> should render an alert an a disabled form when form is contribuable and user is not logged in 1`] = `
<div>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    className="hidden-print text-center"
    closeLabel="Close alert"
  >
    <strong>
      <FormattedMessage
        id="reply.not_logged_in.error"
        values={Object {}}
      />
    </strong>
    <Connect(InjectIntl(RegistrationButton))
      bsStyle="primary"
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
    <InjectIntl(Connect(LoginButton))
      style={
        Object {
          "marginLeft": 5,
        }
      }
    />
  </Alert>
  <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "anonymousAllowed": true,
        "contribuable": true,
        "description": null,
        "id": "2",
        "multipleRepliesAllowed": true,
        "phoneConfirmationRequired": false,
        "viewerReplies": Array [
          Object {
            "id": "289",
          },
        ],
      }
    }
    reply={null}
  />
</div>
`;

exports[`<ReplyCreateFormWrapper /> should render no alert an an enabled form 1`] = `
<div>
  <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
    questionnaire={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "anonymousAllowed": true,
        "contribuable": true,
        "description": null,
        "id": "2",
        "multipleRepliesAllowed": true,
        "phoneConfirmationRequired": false,
        "viewerReplies": Array [
          Object {
            "id": "289",
          },
        ],
      }
    }
    reply={null}
  />
</div>
`;
